Add html main structure and html partials

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,11 +1,22 @@
 <footer class="page__footer">
-  <small>
-    &copy; Todos los derechos reservados
-    <include
-      src="./link.html"
-      aClass="link__adalab"
-      text="Adalab"
-      url="https://adalab.es"
-    ></include>
-  </small>
+  <div class="nav__icon">
+    <img src="./assets/images/arrow.svg" alt="" class="nav__icon--img">
+  </div>
+  <nav class="footer__nav--content">
+    <ul class="footer__list">
+      <li class="footer__list--item"><a href="https://adalab.es" target="_blank" class="footer__list--link" >Articles</a></li>
+      <li class="footer__list--item"><a href="https://adalab.es" target="_blank" class="footer__list--link">Books</a></li>
+      <li class="footer__list--item"><a href="https://adalab.es" target="_blank" class="footer__list--link">Events</a></li>
+      <li class="footer__list--item"><a href="https://adalab.es" target="_blank" class="footer__list--link">Reasons</a></li>
+      <li class="footer__list--item"><a href="https://adalab.es" target="_blank" class="footer__list--link">Tips</a></li>
+  </ul>
+</nav>
+  <nav class="footer__nav--media">
+    <ul class="footer__list">
+      <li class="footer__list--item">Twitter</li>
+      <li class="footer__list--item">Instagram</li>
+      <li class="footer__list--item">Mastodon.social</li>
+    </ul>
+</nav>
+<small class="footer--copyright"> &copy; 2021 </small> <span class="footer__span">we ❤︎ components</span>
 </footer>
