--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,10 @@
-<header class="page__header">
-  <img src="./assets/images/logo-adalab.png" alt="Adalab">
-  <h1>@@title</h1>
-</header>
+<header class="header">
+  <nav class="header__nav">
+    <img class="header__nav--img" src="./assets/images/ico-menu.svg" alt="Icono menú"></nav>
+  
+  <h1 class="header__title">Anonymous Proxy</h1>
+  <h2 class="header__subtitle">In hac habitasse platea dictumst.</h2>
+  <div class="nav__icon">
+    <img src="./assets/images/ico-scroll-down" alt="" class="nav__icon--img">
+  </div>
+</head>
