--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -4,3 +4,7 @@ $font-main: 'Roboto', sans-serif;
 // colors
 $color-bg: #f3f4f5;
 $color-secondary: #999;
+
+//mediaqueries
+$tablet: 768px;
+$desktop: 1200px;
