--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,40 +1,29 @@
-<main class="page__main">
-  <h2>Este es el starter kit de Adalab</h2>
-  <p>Lo usamos para aprender:</p>
-  <ul class="main__list">
-    <li>Sass</li>
-    <li>HTML partials</li>
-    <li>Gulp</li>
-    <li>y muchas cosas más</li>
-  </ul>
-  <p>Si quieres saber cúales son las rutas correctas para:</p>
-  <ul class="main__list">
-    <li>
-      una <code class="code">&lt;img /&gt;</code> mira el fichero
-      <code class="code">./src/html/partials/header.html</code>.
-    </li>
-    <li>
-      y para un <code class="code">background-image</code> mira el fichero
-      <code class="code">./src/html/scss/layout/_page.scss</code>.
-    </li>
-  </ul>
-  <p>
-    Si quieres saber cómo usar un partial HTML dentro de otro partial, busca en la carperta
-    <code class="code">./src/html/index.html</code> y
-    <code class="code">./src/html/partials/main.html</code>, y verás cómo estamos creando estos
-    enlaces:
-  </p>
-  <ul class="main__list">
-    <li>
-      <include
-        src="./link.html"
-        aClass="link__adalab"
-        text="Adalab"
-        url="https://adalab.es"
-      ></include>
-    </li>
-    <li>
-      <include src="./link.html" text="Más info del starter kit" url="./more-info.html"></include>
-    </li>
-  </ul>
+<main class="main">
+  <section class="main__section--tips">
+    <h4 class="main__section--title-small">Insomnia Tips</h4>
+    <h2 class="main__section--title">Looking Through A Window</h2>
+    <p class="main__section--paragraph">
+        Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
+    </p>
+    <button class="main__section--tips-button">Go</button>
+  </section>
+  <section class="main__section--purchase">
+    <h2 class="main__section--title">3 Reasons To Purchase</h2>
+    <include
+      src="./reasons.html"
+      h3Article="Ut sed metus"
+      pArticle="Lorem ipsum dolor sit amet, consecteur."
+    ></include>
+    <include
+      src="./reasons.html"
+      h3Article="Curabitur ac erat"
+      pArticle="Mauris mattis urna quis lorem molestie."
+    ></include>
+    <include
+      src="./reasons.html"
+      h3Article="Morbi dictum"
+      pArticle="Aliquam in dolor et dolor tincidunt."
+    ></include>
+    <button class="main__section--purchase-button">More reasons</button>
+  </section>
 </main>
