Add scss partials and CSS for header

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="page__footer">
+<footer class="footer">
   <div class="nav__icon">
     <img src="./assets/images/arrow.svg" alt="" class="nav__icon--img">
   </div>
