--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -8,7 +8,7 @@
     <button class="main__section--tips-button">Go</button>
   </section>
   <section class="main__section--purchase">
-    <h2 class="main__section--title">3 Reasons To Purchase</h2>
+    <h2 id="reasons" class="main__section--title">3 Reasons To Purchase</h2>
     <include
       src="./reasons.html"
       h3Article="Ut sed metus"
