--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,10 +1,13 @@
-<header class="header">
+<header class="header" id="top">
   <nav class="header__nav">
-    <img class="header__nav--img" src="./assets/images/ico-menu.svg" alt="Icono menú"></nav>
-  
-  <h1 class="header__title">Anonymous Proxy</h1>
+    <a href="https://adalab.es" target="_blank" class="footer__list--link" ><img class="header__nav--img" src="./assets/images/ico-menu.svg" title="Menú" alt="Icono menú"></a></nav>
+  <h1 class="header__title">
+    <span class="header__title--span">Anonymous</span>
+    <span class="header__title--span">Proxy</span></h1>
   <h2 class="header__subtitle">In hac habitasse platea dictumst.</h2>
-  <div class="nav__icon">
-    <img src="./assets/images/ico-scroll-down" alt="" class="nav__icon--img">
-  </div>
-</head>
+  <a href="#reasons" class="link--internal">
+    <div class="nav__icon">
+      <img src="./assets/images/ico-scroll-down.svg" alt="icon header" class="nav__icon--img">
+    </div>
+  </a>
+</header>
