--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,9 +1,22 @@
 // fonts
-$font-main: 'Roboto', sans-serif;
+$font-title: "Roboto Slab", sans-serif;
+$font-text: "Roboto", sans-serif;
 
-// colors
-$color-bg: #f3f4f5;
-$color-secondary: #999;
+// brand colors
+$white: #ffffff;
+$black: black;
+$grey: #4a4a4a;
+$orange: #f26002;
+$light-blue: #8ccbea;
+$blue: #0271bc;
+$dark-blue: #304268;
+
+//page colors
+$color-bg: $white;
+$icons-brand: $orange;
+$light-brand: $light-blue;
+$color-brand: $blue;
+$dark-brand: $dark-blue;
 
 //mediaqueries
 $tablet: 768px;
