--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,29 +1,29 @@
 <main class="main">
-  <section class="main__section--tips">
-    <h4 class="main__section--title-small">Insomnia Tips</h4>
-    <h2 class="main__section--title">Looking Through A Window</h2>
-    <p class="main__section--paragraph">
-        Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
-    </p>
-    <button class="main__section--tips-button">Go</button>
-  </section>
-  <section class="main__section--purchase">
-    <h2 id="reasons" class="main__section--title">3 Reasons To Purchase</h2>
-    <include
-      src="./reasons.html"
-      h3Article="Ut sed metus"
-      pArticle="Lorem ipsum dolor sit amet, consecteur."
-    ></include>
-    <include
-      src="./reasons.html"
-      h3Article="Curabitur ac erat"
-      pArticle="Mauris mattis urna quis lorem molestie."
-    ></include>
-    <include
-      src="./reasons.html"
-      h3Article="Morbi dictum"
-      pArticle="Aliquam in dolor et dolor tincidunt."
-    ></include>
-    <button class="main__section--purchase-button">More reasons</button>
-  </section>
+	<section class="main__section--tips">
+		<div class="container">
+			<h4 class="main__section--title-small">Insomnia Tips</h4>
+			<h2 class="main__section--title">Looking Through A Window</h2>
+			<p class="main__section--paragraph">
+				Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus
+				semper sodales rutrum.
+			</p>
+			<button class="main__section--tips-button"><include src="./link.html" url="https://adalab.es/" aClass="footer__list--link" text="Go" target="_blank"></include></button>
+		</div>
+	</section>
+	<section class="main__section--purchase">
+      <div class="container">
+			<h2 id="reasons" class="main__section--title">3 Reasons To Purchase</h2>
+			<include
+				src="./articles_reasons.html"
+				h3Article="Ut sed metus"
+				pArticle="Lorem ipsum dolor sit amet, consecteur."></include>
+			<include
+				src="./articles_reasons.html"
+				h3Article="Curabitur ac erat"
+				pArticle="Mauris mattis urna quis lorem molestie."
+			></include>
+			<include src="./articles_reasons.html" h3Article="Morbi dictum" pArticle="Aliquam in dolor et dolor tincidunt."></include>
+			<button class="main__section--purchase-button">More reasons</button>
+    </div>
+    </section>	
 </main>
