--- a/src/scss/core/_reset.scss
+++ b/src/scss/core/_reset.scss
@@ -1,9 +1,10 @@
 * {
-  box-sizing: border-box;
+  	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 	list-style: none;
 	text-decoration: none;
 	border: none;
 	outline: none;
+	scroll-behavior: smooth;
 }
