--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -8,16 +8,19 @@ $black: black;
 $grey: #4a4a4a;
 $orange: #f26002;
 $light-blue: #8ccbea;
+$ice-blue: #eff9ff;
 $blue: #0271bc;
 $dark-blue: #304268;
 
 //page colors
 $color-bg: $white;
+$color-bg-2: $ice-blue;
+$color-text: $grey;
 $icons-brand: $orange;
 $light-brand: $light-blue;
 $color-brand: $blue;
 $dark-brand: $dark-blue;
 
 //mediaqueries
-$tablet: 768px;
-$desktop: 1200px;
+$minTablet: 768px;
+$minDesktop: 1200px;
