--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -21,9 +21,10 @@
         }
     }
     &__title {
-        font-family: $font-title;
-        font-weight: 600;
-        font-size: 42px;
+        @include robotoBold{
+            font-size: 42px;
+            line-height: 55px;
+        }        
         text-transform: uppercase;
         text-align: center;
         color: $color-bg;
@@ -33,9 +34,9 @@
         }
     }
     &__subtitle {
-        font-family: $font-text;
-        font-size: 16px;
-        font-weight: 500;
+        @include robotoRegular {
+            font-size: 16px;
+        }
         color: $color-bg;
         margin-bottom: 45px;
     }
@@ -48,7 +49,4 @@
     margin-bottom: 53px;
     display: flex;
     justify-content: center;
-    // &img {
-        
-    // }
 }
