--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -21,6 +21,11 @@
     font-weight: 600;
     @content;
 }
+@mixin articleText {
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+}
 
 //Mediaqueries
 @mixin mediaTablet {
