Add new branch for footer and add display flex to it

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -4,9 +4,9 @@
 			<img src="./assets/images/ico-arrow.svg" alt="Icono footer" class="nav__icon--img" />
 		</div>
 	</a>
-	<div class="container">
-		<nav class="footer__nav--content">
-			<ul class="footer__list">
+	<div class="container--footer">
+		<nav class="footer__nav">
+			<ul class="footer__list footer__list--content">
 				<li class="footer__list--item">
 					<include
 						src="./link.html"
@@ -30,7 +30,7 @@
 						src="./link.html"
 						url="https://adalab.es/"
 						aClass="footer__list--link"
-						text="Event"
+						text="Events"
 						target="_blank"
 					></include>
 				</li>
@@ -54,8 +54,8 @@
 				</li>
 			</ul>
 		</nav>
-		<nav class="footer__nav--media">
-			<ul class="footer__list">
+		<nav class="footer__nav">
+			<ul class="footer__list footer__list--media">
 				<li class="footer__list--item">
 					<include
 						src="./link.html"
@@ -85,9 +85,9 @@
 				</li>
 			</ul>
 		</nav>
-		<div class="container-copyright">
-			<small class="footer--copyright"> &copy; 2021 </small>
-			<span class="footer__span">we <span class="footer__span--icon">❤︎</span> components</span>
+		<div class="container__copyright copyright">
+			<small class="copyright__small"> &copy; 2021 </small>
+			<small class="copyright__small">we <span class="copyright__small--icon">❤︎</span> components</small>
 		</div>
 	</div>
 </footer>
