--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -13,7 +13,7 @@
 }
 @mixin robotoMedium {
     font-family: $font-text;
-    font-weight: 500;
+    font-weight: normal;
     @content;    
 }
 @mixin robotoBold {
