--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -29,13 +29,13 @@
 
 //Mediaqueries
 @mixin mediaTablet {
-    @media all and (min-width: $minTablet) {
+    @media all and (min-width: 768px) {
       @content;
     }
   }
   
   @mixin mediaDesktop {
-    @media all and (min-width: $minDesktop) {
+    @media all and (min-width: 1200px) {
       @content;
     }
   }
