Fix mediaqueries for main's first section

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,6 +1,6 @@
 <main class="main">
 	<section class="main__section--tips">
-		<div class="container">
+		<div class="container--insomnia">
 			<h4 class="main__section--title-small">Insomnia Tips</h4>
 			<h2 class="main__section--title">Looking Through A Window</h2>
 			<p class="main__section--paragraph">
