--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -1,9 +1,9 @@
 //Flex
-@mixin flex-absoluteCentered {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+// @mixin flex-absoluteCentered {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+// }
 
 //Fonts
 @mixin robotoRegular {
