--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -18,11 +18,13 @@
 		justify-content: center;
 		align-items: center;
 		@include mediaTablet {
-			margin: 0 40px;
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: flex-start;
+			margin: 0 40px;		
 		}
 		@include mediaDesktop {
-			margin: 0 80px;
-			max-width: 1200px; //Revisar en los iconos de navegación absoluto.
+			margin: 0 370px;
 		}
     }
     &__copyright {
@@ -30,9 +32,11 @@
         margin-bottom: 30px;
         display: flex;
         flex-direction: column;
-        text-align: center;
-
-     
+		text-align: center;
+		@include mediaTablet {
+			margin-top: 45px;
+			order: -1;
+		}
     }
 }
 .copyright {    
@@ -52,16 +56,27 @@
 		line-height: 30px;
 	}
 	&__list {
+		text-transform: uppercase;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		text-transform: uppercase;
 		&--content {
 			padding-top: 60px;
+			@include mediaTablet {
+				padding-top: 0;	
+				margin-top: 45px;
+				margin-bottom: 45px;			
+				align-items: flex-start;
+			}
 		}
 		&--media {
 			padding-top: 45px;
+			@include mediaTablet {
+				padding-top: 0;	
+				margin-top: 45px;			
+				align-items: flex-start;
+			}
 		}
 	}
 }
