Add transitions to buttons

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
 	<a href="#top" class="link--internal">
 		<div class="nav__icon--footer">
-			<img src="./assets/images/ico-arrow.svg" alt="Icono footer" class="nav__icon--img" />
+			<img src="./assets/images/ico-arrow.svg" alt="Icono footer" class="nav__icon--img up" />
 		</div>
 	</a>
 	<div class="container--footer">
