--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -7,7 +7,7 @@
   <h2 class="header__subtitle">In hac habitasse platea dictumst.</h2>
   <a href="#reasons" class="link--internal">
     <div class="nav__icon">
-      <img src="./assets/images/ico-scroll-down.svg" alt="icon header" class="nav__icon--img">
+      <img src="./assets/images/ico-scroll-down.svg" alt="icon header" class="nav__icon--img down">
     </div>
   </a>
 </header>
