--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -7,7 +7,7 @@
 				Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus
 				semper sodales rutrum.
 			</p>
-			<button class="main__section--tips-button"><include src="./link.html" url="https://adalab.es/" aClass="footer__list--link" text="Go" target="_blank"></include></button>
+			<button class="main__section--tips-button">Go</button>
 		</div>
 	</section>
 	<section class="main__section--purchase">
@@ -27,7 +27,7 @@
 				h3Article="Morbi dictum" 
 				pArticle="Aliquam in dolor et dolor tincidunt.">
 			</include>
-			<button class="main__section--purchase-button"><include src="./link.html" url="https://adalab.es/" aClass="footer__list--link" text="More reasons" target="_blank"></include></button>
+			<button class="main__section--purchase-button">More reasons</button>
     </div>
     </section>	
 </main>
