--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -10,6 +10,23 @@
 	left: 50%;
 	transform: translate(-50%, -50%); //translate (x, y) x=0, y=0 es de donde se parte.
 }
+.up:hover {
+	animation: up 1s 6;
+}
+@keyframes up {
+	0% {
+		transform: translateY(-5px);
+	}
+
+	50% {
+		transform: translateY(-10px);
+	}
+
+	100% {
+		transform: translateY(-15px);
+	}
+
+}
 .container {
 	&--footer {
 		margin: 0 15px;
@@ -51,7 +68,7 @@
 .footer {
 	background-color: $dark-brand;
 	color: $color-bg;
-	@include robotoMedium {
+	@include robotoRegular {
 		font-size: 16px;
 		line-height: 30px;
 	}
@@ -77,6 +94,10 @@
 				margin-top: 45px;			
 				align-items: flex-start;
 			}
+		}
+		&--item:hover {
+			transition: color $trans-bt;
+			color: $icons-brand;
 		}
 	}
 }
