--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -15,10 +15,9 @@
         position: fixed;
         top: 0;
         left: 0;
-        &--img {
-            display: block;
-            margin: 14px auto;
-        }
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     &__title {
         color: $color-bg;
@@ -76,3 +75,4 @@
     display: flex;
     justify-content: center;
 }
+
