--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,13 +1,17 @@
 <header class="header" id="top">
-  <nav class="header__nav">
-    <a href="https://adalab.es" target="_blank" class="footer__list--link" ><img class="header__nav--img" src="./assets/images/ico-menu.svg" title="Menú" alt="Icono menú"></a></nav>
-  <h1 class="header__title">
-    <span class="header__title--span">Anonymous</span>
-    <span class="header__title--span">Proxy</span></h1>
-  <h2 class="header__subtitle">In hac habitasse platea dictumst.</h2>
-  <a href="#reasons" class="link--internal">
-    <div class="nav__icon">
-      <img src="./assets/images/ico-scroll-down.svg" alt="icon header" class="nav__icon--img --down">
-    </div>
-  </a>
+	<nav class="header__nav">
+    <a href="https://adalab.es" target="_blank" class="footer__list--link">
+      <img class="header__img" src="./assets/images/ico-menu.svg" title="Menú" alt="Icono menú"/>
+    </a>
+	</nav>
+	<h1 class="header__title">
+		<span class="header__title--span">Anonymous</span>
+		<span class="header__title--span">Proxy</span>
+	</h1>
+	<h2 class="header__subtitle">In hac habitasse platea dictumst.</h2>
+	<a href="#reasons" class="link--internal">
+		<div class="nav__icon">
+			<img src="./assets/images/ico-scroll-down.svg" alt="icon header" class="nav__icon--img --down" />
+		</div>
+	</a>
 </header>
