--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -15,15 +15,19 @@
 			<h2 id="reasons" class="main__section--title-center">3 Reasons To Purchase</h2>
 			<include
 				src="./articles_reasons.html"
+				number="-1"
 				h3Article="Ut sed metus"
-				pArticle="Lorem ipsum dolor sit amet, consecteur."></include>
+				pArticle="Lorem ipsum dolor sit amet, consecteur.">
+			</include>
 			<include
 				src="./articles_reasons.html"
+				number="-2"
 				h3Article="Curabitur ac erat"
-				pArticle="Mauris mattis urna quis lorem molestie."
-			></include>
+				pArticle="Mauris mattis urna quis lorem molestie.">
+			</include>
 			<include 
 				src="./articles_reasons.html" 
+				number="-3"
 				h3Article="Morbi dictum" 
 				pArticle="Aliquam in dolor et dolor tincidunt.">
 			</include>
