--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -16,13 +16,10 @@ $dark-blue: #304268;
 $color-bg: $white;
 $color-bg-2: $ice-blue;
 $color-text: $grey;
-$icons-brand: $orange;
+$deco-brand: $orange;
 $light-brand: $light-blue;
 $color-brand: $blue;
 $dark-brand: $dark-blue;
 
-//mediaqueries
-
 //transitions
 $trans-bt: 0.8s ease;
-
