--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,162 +1,168 @@
 .container--insomnia {
-    margin: 0 15px;
-    @include mediaTablet {
-        margin: 0 40px;
-    }
-    @include mediaDesktop {
-        margin: 0 275px;
-    }
+	margin: 0 15px;
+	@include mediaTablet {
+		margin: 0 40px;
+	}
+	@include mediaDesktop {
+		margin: 0 275px;
+	}
 }
 .container--grid {
-    margin: 0 15px;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 70px 1fr 1fr 1fr 1fr ;
-    grid-template-areas: "title" "reason1" "reason2" "reason3" "buttonMore";    
-    @include mediaTablet {
-        margin: 0 40px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 75px 1fr 165px;
-        grid-template-areas: "title title title" "reason1 reason2 reason3" "buttonMore buttonMore buttonMore";
-    }
-    @include mediaDesktop {
-        margin: 0 auto;
-        max-width: 1200px;   
-    } 
+	margin: 0 15px;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 70px 1fr 1fr 1fr 150px;
+	grid-template-areas: "title" "reason1" "reason2" "reason3" "button";
+	@include mediaTablet {
+		margin: 0 40px;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-rows: 75px 1fr 165px;
+		grid-template-areas: "title title title" "reason1 reason2 reason3" "button button button";
+	}
+	@include mediaDesktop {
+		margin: 0 auto;
+		grid-template-rows: 150px 1fr 165px;
+		max-width: 1200px;
+	}
 }
-.main__section{
-    &--tips {
-        background-color: $color-bg;
-        &-button {
-            width: 76px;
-            height: 45px;
-            background-color: $color-bg;
-            border: 2px $icons-brand solid;
-            border-radius: 22.5px;
-            margin: 30px 0 45px;
-            transform: scale(1);
-            transition: transform $trans-bt, color $trans-bt, border $trans-bt;           
-            &:hover {
-            transform: scale(1.2);
-            color: darken($icons-brand, 100%);
-            border: 2px darken($icons-brand, 100%) solid;       
-            }
-            @include mediaTablet {
-                width: 160px;
-                margin-bottom: 60px;
-            }
-            @include robotoMedium {
-                font-size: 20px;
-                line-height: 45px;
-                color: $icons-brand;
-            }
-        }
-    }
-    &--title {
-        @include robotoBold {
-            font-size: 24px;
-            line-height: 30px;
-            @include mediaTablet {
-                font-size: 26px;
-                line-height: 45px;
-            }
-            @include mediaDesktop {
-                font-size: 32px;
-            }
-        }
-        &-small {
-            @include robotoRegular {
-                font-size: 14px;
-                line-height: 30px;
-                color: $light-brand;
-                @include mediaDesktop {
-                    font-size: 16px;
-                }
-            }
-            margin-top: 30px;
-        }
-        &-center {
-            @include robotoBold {
-                font-size: 24px;
-                line-height: 30px;
-                text-align: center;
-            }
-            padding-top: 30px;
-            @include mediaTablet {
-                grid-area: title;
-                margin-top: 0;
-                padding-top: 40px;              
-            }
-            @include mediaDesktop {
-                padding-top: 60px;              
-            }
-        }
-    }
-    &--paragraph {
-        @include robotoRegular {
-            font-size: 18px;
-            line-height: 30px;
-            color: $color-text;
-            margin-top: 15px;
-            @include mediaTablet {
-                margin-top: 30px;
-            }
-        }
-    }
-    &--purchase {
-        background-color: $color-bg-2;
-        &-button {
-            width: 184px;
-            height: 45px;
-            background-color: $icons-brand;            
-            border-radius: 22.5px;
-            transform: scale(1);
-            transition: transform $trans-bt, background-color $trans-bt;           
-            &:hover {
-            transform: scale(1.2);
-            background-color: darken($icons-brand, 100%);         
-            }
-            margin: 45px auto 60px;
-            @include robotoMedium {
-                font-size: 20px;
-                line-height: 45px;
-                color: $color-bg;
-            }
-            @include mediaTablet { 
-                width: 210px;               
-                grid-area: buttonMore;
-            }
-            @include mediaDesktop {
-                width: 255px;
-            }
-        }
-    }    
+.main__section {
+	&--tips {
+		background-color: $color-bg;
+		&-button {
+			width: 76px;
+			height: 45px;
+			@include robotoMedium {
+				@include sizeHeight(20px, 45px);
+				color: $deco-brand;
+			}
+			background-color: $color-bg;
+			border: 2px $deco-brand solid;
+			border-radius: 22.5px;
+			margin: 30px 0 45px;
+			transform: scale(1);
+			transition: transform $trans-bt, color $trans-bt, border $trans-bt;
+			&:hover {
+				transform: scale(1.2);
+				color: darken($deco-brand, 100%);
+				border: 2px darken($deco-brand, 100%) solid;
+			}
+			@include mediaTablet {
+				width: 91px;
+				margin-bottom: 60px;
+			}
+			@include mediaDesktop {
+				width: 160px;
+			}
+		}
+	}
+	&--title {
+		@include robotoBold {
+			@include sizeHeight(24px, 30px);
+			@include mediaTablet {
+				@include sizeHeight(26px, 45px);
+			}
+			@include mediaDesktop {
+				font-size: 32px;
+			}
+		}
+		&-small {
+			@include robotoRegular {
+				@include sizeHeight(14px, 30px);
+				color: $light-brand;
+				@include mediaDesktop {
+					font-size: 16px;
+				}
+			}
+			margin-top: 30px;
+		}
+		&-center {
+			@include robotoBold {
+				@include sizeHeight(24px, 30px);
+				text-align: center;
+			}
+			padding-top: 30px;
+			@include mediaTablet {
+				grid-area: title;
+				margin-top: 0;
+			}
+			@include mediaDesktop {
+				padding-top: 60px;
+			}
+		}
+	}
+	&--paragraph {
+		@include robotoRegular {
+			@include sizeHeight(18px, 30px);
+			color: $color-text;
+			margin-top: 15px;
+			@include mediaTablet {
+				@include sizeHeight(20px, 30px);
+				margin-top: 30px;
+			}
+		}
+	}
+	&--purchase {
+		background-color: $color-bg-2;
+		&-button {
+			width: 184px;
+			height: 45px;
+			background-color: $deco-brand;
+			border-radius: 22.5px;
+			transform: scale(1);
+			transition: transform $trans-bt, background-color $trans-bt;
+			&:hover {
+				transform: scale(1.2);
+				background-color: darken($deco-brand, 100%);
+			}
+			margin: 45px auto 60px;
+			@include robotoMedium {
+				@include sizeHeight(20px, 45px);
+				color: $color-bg;
+			}
+			@include mediaTablet {
+				width: 210px;
+				grid-area: button;
+			}
+			@include mediaDesktop {
+				width: 255px;
+			}
+		}
+	}
 }
-
 .main__article {
-    &--title {
-        margin: 45px 68px 0;        
-        @include robotoBold {
-            font-size: 18px;
-            line-height: 30px;
-            text-align: center;
-        }
-        @include mediaTablet {
-            margin-left: 0;
-            margin-right: 0;
-        }
-
-    }
-    &--paragraph {
-        margin: 0 70px;
-        @include robotoRegular {
-            @include articleText;
-        }
-        @include mediaTablet {
-            margin-right: 20px;
-            margin-left: 20px;
-        }
-    }
-
+	&--title {
+		margin: 45px 68px 0;
+		@include robotoBold {
+			@include sizeHeight(18px, 30px);
+			text-align: center;
+		}
+		@include mediaTablet {
+			margin-left: 0;
+			margin-right: 0;
+		}
+		@include mediaDesktop {
+			margin-top: 0;
+		}
+	}
+	&--paragraph {
+		margin: 0 70px;
+		@include robotoRegular {
+			@include sizeHeight(18px, 30px);
+			text-align: center;
+		}
+		@include mediaTablet {
+			margin-right: 20px;
+			margin-left: 20px;
+		}
+	}
+	&-1 {
+		grid-area: reason1;
+	}
+	&-2 {
+		grid-area: reason2;
+	}
+	&-3 {
+		grid-area: reason3;
+	}
 }
