Clean classes in header, main and footer

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
-	<a href="#top" class="link--internal">
+	<a href="#top" class="link">
 		<div class="nav__icon--footer">
-			<img src="./assets/images/ico-arrow.svg" alt="Icono footer" class="nav__icon--img up" />
+			<img src="./assets/images/ico-arrow.svg" title="Al inicio" alt="Icono footer" class="nav__icon--img up" />
 		</div>
 	</a>
-	<div class="container--footer">
+	<div class="container-footer">
 		<nav class="footer__nav">
 			<ul class="footer__list footer__list--content">
 				<li class="footer__list--item">
