--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -9,7 +9,7 @@
 		<span class="header__title--span">Proxy</span>
 	</h1>
 	<h2 class="header__subtitle">In hac habitasse platea dictumst.</h2>
-	<a href="#reasons" class="link--internal">
+	<a href="#reasons" class="link">
 		<div class="nav__icon">
 			<img src="./assets/images/ico-scroll-down.svg" alt="icon header" class="nav__icon--img --down" />
 		</div>
