--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,5 +1,5 @@
 // fonts
-$font-title: "Roboto Slab", sans-serif;
+$font-title: "Roboto Slab", serif;
 $font-text: "Roboto", sans-serif;
 
 // brand colors
